--- a/src/templates/account/signin.html
+++ b/src/templates/account/signin.html
@@ -1,23 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign in - Hoee Lab</title>
-</head>
-<body>
-    <h1>로그인</h1>
-    <form method="post">
-        <label>ID</label>
-        <input type="text" id="id" name="id" value="{{ id }}">
-        <br>
-        <label>Password</label>
-        <input type="password" id="pw" name="pw" value="{{ pw }}">
-        <br>
-        <input type="submit">
-    </form>
+{% extends "base.html" %}
+{% block title %}Sign in - {% endblock %}
+{% block content %}
 
-    {{ status }}
-</body>
-</html>
+<h2>로그인</h2>
+<form method="post">
+    <label>ID</label>
+    <input type="text" id="id" name="id" value="{{ id }}">
+    <br>
+    <label>Password</label>
+    <input type="password" id="pw" name="pw" value="{{ pw }}">
+    <br>
+    <input type="submit">
+</form>
+
+{{ status }}
+
+{% endblock %}
