--- a/src/templates/account/signup.html
+++ b/src/templates/account/signup.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign up - Hoee Lab</title>
-</head>
-<body>
-    <h1>회원가입</h1> 
+{% extends "base.html" %}
+{% block title %}Sign up - {% endblock %}
+{% block content %}
+
+<h2>회원가입</h2> 
     <form method="post">
         <label>ID - 실명, 한글 입력</label>
         <input type="text" id="id" name="id" value="{{ id }}">
@@ -20,5 +15,7 @@
         <br>
         <input type="submit">
     </form>
-</body>
-</html>
+
+{{ status }}
+
+{% endblock %}
