--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,9 +7,10 @@
 <h4><a href="kakaotalk">우리들의 아름다운 기록 구경하기...</a></h4>
 
 <a href="signout">로그아웃</a>
+<a href="edit/password">비밀번호변경</a>
+<a href="edit/name">이름변경</a>
 {% else %}
 <h2>환영하긴한데.. 로그인하세용</h2>
-
 <br>
 <a href="signin">로그인</a>
 <a href="signup">회원가입</a>
