--- a/src/templates/account/signin.html
+++ b/src/templates/account/signin.html
@@ -8,7 +8,7 @@
     <input type="text" id="id" name="id" value="{{ id }}">
     <br>
     <label>Password</label>
-    <input type="password" id="pw" name="pw" value="{{ pw }}">
+    <input type="password" id="pw" name="pw">
     <br>
     <input type="submit">
 </form>
