--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title%}{% endblock %}Hoee Lab</title>
+    
+    <link href="../static/style.css" rel="stylesheet" />
     {% endblock %}
 </head>
 <body>
@@ -14,5 +16,9 @@
     </header>
     {% block content %}
     {% endblock %}
+    <footer>
+        <h6>Copyright 2022. <a href="https://github.com/hovengers">Hovengers</a> all rights reserved.</h6>
+    </footer>
+    <script src="../static/script.js"></script>
 </body>
 </html>
