capsule template 수정 - 홈에서 캡슐 접근 가능

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,7 +4,11 @@
 {% if name %}
 <h2>{{ name }}님 환영합니다</h2>
 
-<h4><a href="kakaotalk">우리들의 아름다운 기록 구경하기...</a></h4>
+<h4>기능목록</h4>
+<p>
+    1. <a href="kakaotalk">카톡</a> <br>
+    2. <a href="capsule">캡슐</a>
+</p>
 
 <a href="signout">로그아웃</a>
 <a href="edit/password">비밀번호변경</a>
