--- a/src/templates/kakaotalk/index.html
+++ b/src/templates/kakaotalk/index.html
@@ -8,9 +8,56 @@
     가장 자주 보낸 메시지는 "{{ data.msg_most }}" 이네요!
 </h2>
 
+<h2>우리들의 추억이 담긴 랜덤 메시지 30개(새로고침 할 때마다 바뀝니다)</h2>
+<table>
+    <th>메시지</th>
+    {% for msg in data.msg_random %}
+    <tr>
+        <td>{{ msg }}</td>
+    </tr>
+    {% endfor %}
+</table>
+
+
 <h2>우리가 가장 많이 대화한 날은 {{ data.date_most }}이고, 가장 적게 대화한 날은 {{ data.date_least }}이에요.</h2>
 
+<table>
+    <th>가장 많이 대화한 날</th>
+    {% for date in data.date_most_list %}
+    <tr>
+        <td>{{ date }}</td>
+    </tr>
+    {% endfor %}
+</table>
+
+<table>
+    <th>가장 적게 대화한 날</th>
+    {% for date in data.date_least_list %}
+    <tr>
+        <td>{{ date }}</td>
+    </tr>
+    {% endfor %}
+</table>
+
 <h2>우리가 가장 많이 대화한 시간은 {{ data.time_most }}시고, 가장 적게 대화한 시간은 {{ data.time_least }}시예요.</h2>
+
+<table>
+    <th>가장 많이 대화한 시간</th>
+    {% for time in data.time_most_list %}
+    <tr>
+        <td>{{ time }}시</td>
+    </tr>
+    {% endfor %}
+</table>
+
+<table>
+    <th>가장 적게 대화한 시간</th>
+    {% for time in data.time_least_list %}
+    <tr>
+        <td>{{ time }}시</td>
+    </tr>
+    {% endfor %}
+</table>
 
 <h2>
     우리 방에서 가장 많이 말한 사람은 {{ data.user_most }}이고, 가장 적게 말한 사람은 {{ data.user_least }}이에요.<br>
@@ -24,6 +71,21 @@
     {% endif %}
 </h2>
 
+<h3>전체 순위 보기</h3>
+<table>
+    <th>순위</th>
+    <th>사용자</th>
+    <th>전체 메시지 개수</th>
+    {% for value in data.user_list %}
+    <tr>
+        <td>{{ loop.index }}</td>
+        <td>{{ value.0 }}</td>
+        <td>{{ value.1 }}개</td>
+    </tr>
+    {% endfor %}
+</table>
+
+
 <h2>
     {{ data.username }}님은 하루 평균 {{ data.talk_avg }}번 말했어요. 당신의 순위는 {{ data.day_talk_rank }}위입니다.
     {% if data.talk_avg > 100 %}
@@ -34,5 +96,20 @@
      우리를 버리셨나요?
     {% endif %}
 </h2>
+
+<h3>전체 순위 보기</h3>
+<table>
+    <th>순위</th>
+    <th>사용자</th>
+    <th>일평균 메시지 개수</th>
+    {% for value in data.day_talk_list %}
+    <tr>
+        <td>{{ loop.index }}</td>
+        <td>{{ value.0 }}</td>
+        <td>{{ value.1 }}개</td>
+    </tr>
+    {% endfor %}
+</table>
+
 
 {% endblock %}
