--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title%}{% endblock %}Hoee Lab</title>
+    <title>{% block title%}{% endblock %}Lab H</title>
     
     <link href="../static/style.css" rel="stylesheet" />
     {% endblock %}
 </head>
 <body>
     <header>
-        <h1>Hoee Laboratory</h1>
+        <h1>Laboratory H</h1>
     </header>
     {% block content %}
     {% endblock %}
