--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -5,20 +5,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title%}{% endblock %}Hoee Lab</title>
+    <title>{% block title%}{% endblock %}Hoee Archive</title>
     
-    <link href="../static/style.css" rel="stylesheet" />
+    <!-- CSS -->
+    <link href="../static/css/style.css" rel="stylesheet"/>
+    <link href="../static/css/normalize.css" rel="stylesheet"/>
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Single+Day&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gaegu:wght@300;400;700&display=swap" rel="stylesheet">
+
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     {% endblock %}
 </head>
 <body>
     <header>
-        <h1>Hoee Laboratory</h1>
+        <h1><a href="/">호에에 저장소</a></h1>
     </header>
     {% block content %}
     {% endblock %}
     <footer>
-        <h6>Copyright 2022. <a href="https://github.com/hovengers">Hovengers</a> all rights reserved.</h6>
+        <h6>Copyright 2022. 황규현 all rights reserved.</h6>
     </footer>
+    <script>AOS.init();</script>
     <script src="../static/script.js"></script>
 </body>
 </html>
