--- a/src/templates/kakaotalk/index.html
+++ b/src/templates/kakaotalk/index.html
@@ -1,38 +1,58 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>우리들의 카카오톡 기록...</h1>
+<section id="kkt">
+    <h2>우리들의 카카오톡 기록...</h2>
 
-<h2>
-    총 메시지 수는 {{ data.msg_total }}개,<br>
-    가장 자주 보낸 메시지는 "{{ data.msg_most }}" 이네요!
-</h2>
+    1 메시지 기간 2020-2023의 총 메시지 수
+    1-1 연도별 메시지 수
+    1-2 월별 메시지 수
+    1-3 일별 메시지 수 (가장 많이 대화한 날, 적게 대화한 날)
+    1-4 시간대별 메시지 수 (가장 많이 대화한 시간, 가장 적게 대화한 시간)
+    
+    2 가장 자주 보낸 메시지 1위
+    2-1 많이 보낸 메시지 상위 10개
+    2-2 많이 보낸 메시지 하위 10개
+    3-3 많이 보낸 "단어" (ㅋ, ., ㅠㅠ 같은 단순한 단어들을 제외한 키워드!)
 
-<h2>우리가 가장 많이 대화한 날은 {{ data.date_most }}이고, 가장 적게 대화한 날은 {{ data.date_least }}이에요.</h2>
+    3 인간 랭킹
+    3-1 가장 많이 메시지 보낸 사람
+    3-2 가장 적게 메시지 보낸 사람
+    3-3 전체 순위
+    3-4 개인별 일평균 발언량
+    
 
-<h2>우리가 가장 많이 대화한 시간은 {{ data.time_most }}시고, 가장 적게 대화한 시간은 {{ data.time_least }}시예요.</h2>
+    <h3 data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+        총 메시지 수는 {{ data.msg_total }}개,<br>
+        가장 자주 보낸 메시지는 "{{ data.msg_most }}" 이네요!
+    </h3>
 
-<h2>
-    우리 방에서 가장 많이 말한 사람은 {{ data.user_most }}이고, 가장 적게 말한 사람은 {{ data.user_least }}이에요.<br>
-    {{ data.username }}님은 이 톡방에서 {{ data.num_freq }}번 말했네요! 당신의 순위는 {{ data.talk_rank }}위입니다.
-    {% if data.talk_rank < 6 %}
-     당신이 이 방의 중심입니다!
-    {% elif data.talk_rank < 9 %}
-     그래도 자리는 차지하는군요!
-    {% else %}
-     대체 언제오시죠?
-    {% endif %}
-</h2>
+    <h3 data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">우리가 가장 많이 대화한 날은 {{ data.date_most }}이고, 가장 적게 대화한 날은 {{ data.date_least }}이에요.</h3>
 
-<h2>
-    {{ data.username }}님은 하루 평균 {{ data.talk_avg }}번 말했어요. 당신의 순위는 {{ data.day_talk_rank }}위입니다.
-    {% if data.talk_avg > 100 %}
-     독보적입니다!
-    {% elif data.talk_avg > 20 %}
-     톡방을 활성화시키는 데 일조하고 있습니다.
-    {% else %}
-     우리를 버리셨나요?
-    {% endif %}
-</h2>
+    <h3 data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">우리가 가장 많이 대화한 시간은 {{ data.time_most }}시고, 가장 적게 대화한 시간은 {{ data.time_least }}시예요.</h3>
+
+    <h3 data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+        우리 방에서 가장 많이 말한 사람은 {{ data.user_most }}이고, 가장 적게 말한 사람은 {{ data.user_least }}이에요.<br>
+        {{ data.username }}님은 이 톡방에서 {{ data.num_freq }}번 말했네요! 당신의 순위는 {{ data.talk_rank }}위입니다.
+        {% if data.talk_rank < 6 %}
+        당신이 이 방의 중심입니다!
+        {% elif data.talk_rank < 9 %}
+        그래도 자리는 차지하는군요!
+        {% else %}
+        대체 언제오시죠?
+        {% endif %}
+    </h3>
+
+    <h3 data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+        {{ data.username }}님은 하루 평균 {{ data.talk_avg }}번 말했어요. 당신의 순위는 {{ data.day_talk_rank }}위입니다.
+        {% if data.talk_avg > 100 %}
+        독보적입니다!
+        {% elif data.talk_avg > 20 %}
+        톡방을 활성화시키는 데 일조하고 있습니다.
+        {% else %}
+        우리를 버리셨나요?
+        {% endif %}
+    </h3>
+</section>
 
 {% endblock %}
