--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1,5 +1,8 @@
 :root {
     --pink: palevioletred;
+    --dark-pink: rgb(197, 111, 140);
+    --white: #f5f5f5;
+    --extreme-light-gray: #dadada;
     --light-gray: #b3b3b3;
     --gray: #555555;
 
@@ -15,9 +18,11 @@ fonts
 /* base */
 body {padding: 0 4vw;}
 
-h1 {font-family: 'Single Day', cursive;} /* title */
+h1 {font-family: 'Single Day', cursive; font-size: 5vw;} /* title */
 h1 a {color: var(--pink); text-decoration: none;}
-h2 {font-family: 'Gaegu', sans-serif;}
+h2 {font-family: 'Gaegu', sans-serif; font-size: 4.5vw;}
+h3 {font-size: 3.2vw;}
+h4 {font-size: 2.6vw;}
 
 footer {text-align: center; padding-top: 5vw;}
 footer h6 {margin: 0;}
@@ -41,7 +46,19 @@ footer h6 {margin: 0;}
 
 
 /* kakaotalk */
-#kkt {text-align: center;}
+#kkt h2 {text-align: center;}
+#kkt h3 {padding-top: 4em;}
+#kkt div {padding: 5vh 0;}
+#kkt p {font-size: 2vw;}
+#kkt table {overflow: hidden; width: 90%; margin: 0 auto; display: table; font-family: 'Gaegu', sans-serif; font-size: 2vw;}
+#kkt td {font-weight: normal; font-size: 1em;}
+#kkt td, #kkt th {padding-bottom: 2%; padding-top: 2%; padding-left:2%; text-align: center;}
+#kkt tr:nth-child(odd) {background-color: var(--light-gray);} /* Background-color of the odd rows */
+#kkt tr:nth-child(even) {background-color: var(--extreme-light-gray);} /* Background-color of the even rows */
+#kkt th {background-color: var(--white); color: var(--pink); font-family: 'Single Day', cursive;}
+/* #kkt td:first-child {color: var(--pink);} */
+#kkt tr:hover {background-color: var(--gray); -webkit-box-shadow: 0 6px 6px -6px #0E1119; -moz-box-shadow: 0 6px 6px -6px #0E1119; box-shadow: 0 6px 6px -6px #0E1119;}
+#kkt td:hover {background-color: var(--dark-pink); color: var(--gray);}
 
 /* capsule */
 .new_capsule {padding: 0 1vw;}
