--- a/src/templates/kakaotalk/index.html
+++ b/src/templates/kakaotalk/index.html
@@ -1,133 +1,265 @@
 {% extends "base.html" %}
 {% block content %}
-
 <section id="kkt">
-    <h3>우리들의 카카오톡 기록...</h3>
+    <h2>우리들의 카카오톡 기록...</h2>
 
-    1 메시지 기간 2020-2023의 총 메시지 수
-    1-1 연도별 메시지 수
-    1-2 월별 메시지 수
-    1-3 일별 메시지 수 (가장 많이 대화한 날, 적게 대화한 날)
-    1-4 시간대별 메시지 수 (가장 많이 대화한 시간, 가장 적게 대화한 시간)
+    <h3>1. 우리는 얼마나 많은 대화를 했을까?</h3>
     
-    2 가장 자주 보낸 메시지 1위
-    2-1 많이 보낸 메시지 상위 10개
-    2-2 많이 보낸 메시지 하위 10개
-    3-3 많이 보낸 "단어" (ㅋ, ., ㅠㅠ 같은 단순한 단어들을 제외한 키워드!)
+    <div data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+        <h4>1-1. 우리는 {{ data.start_year }}년부터 {{ data.end_year }}년까지
+            총 {{ data.msg_total }}마디를 했습니다.^^</h4>
+    </div>
 
-    3 인간 랭킹
-    3-1 가장 많이 메시지 보낸 사람
-    3-2 가장 적게 메시지 보낸 사람
-    3-3 전체 순위
-    3-4 개인별 일평균 발언량
+    <div data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+        <h4>1-2. 연도별 메시지 수</h4>
+        <table data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+            <tr>
+                <th>연도</th>
+                <th>메시지 수</th>
+            </tr>
+            {% for year in data.year_list %}
+            <tr>
+                <td>{{ year[0] }}년</td>
+                <td>{{ year[1] }}개</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+
+    <div data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+        <h4>1-3. 월별 메시지 수</h4>
+        <p>우리는 {{ data.month_most }}에 가장 많이 대화하고, {{ data.month_least}}에 가장 적게 대화합니다. </p>
+        <table data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+            <tr>
+                <th>순위</th>
+                <th>월</th>
+                <th>메시지 수(많은 순)</th>
+            </tr>
+            {% for val in data.month_list %}
+            <tr>
+                <td>{{ loop.index }}</td>
+                <td>{{ val[0] }}</td>
+                <td>{{ val[1] }}개</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+
+    <div data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+        <h4>1-4. 가장 많은 대화를 나눈 날짜</h4>
+        <p>우리는 {{ data.date_most }}에 가장 많이 대화합니다.</p>
+        <table data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+            <tr>
+                <th>순위</th>
+                <th>날짜</th>
+                <th>메시지 수(많은 순)</th>
+            </tr>
+            {% for date in data.date_most_list %}
+            <tr>
+                <td>{{ loop.index }}</td>
+                <td>{{ date[0] }}</td>
+                <td>{{ date[1] }}개</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+
+    <div data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+        <h4>1-5. 가장 적은 대화를 나눈 날짜</h4>
+        <p>우리는 {{ data.date_least }}에 가장 적게 대화합니다.</p>
+        <table data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+            <tr>
+                <th>순위</th>
+                <th>날짜</th>
+                <th>메시지 수(적은 순)</th>
+            </tr>
+            {% for date in data.date_least_list %}
+            <tr>
+                <td>{{ loop.index }}</td>
+                <td>{{ date[0] }}</td>
+                <td>{{ date[1] }}개</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+
+    <div data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+        <h4>1-6. 시간별 대화량</h4>
+        <p>
+            우리는 카톡을 {{ data.time_most }}시에 가장 많이 보내고, {{ data.time_least }}시에 가장 적게 보냅니다..<br>
+            이 야행성들.ㅋ
+        </p>
+        <table data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+            <tr>
+                <th>순위</th>
+                <th>시간</th>
+                <th>메시지 수(많은 순)</th>
+            </tr>
+            {% for time in data.time_list %}
+            <tr>
+                <td>{{ loop.index }}</td>
+                <td>{{ time[0] }}시</td>
+                <td>{{ time[1] }}개</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
     
 
-    <h3 data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
-        총 메시지 수는 {{ data.msg_total }}개,<br>
-        가장 자주 보낸 메시지는 "{{ data.msg_most }}" 이네요!
-    </h3>
+    <h3>2. 우리는 무슨 말을 할까?</h3>
+    
+    <div data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+        <h4>2-1. 우리는 "{{ data.msg_most }}" 을 가장 많이 사용합니다. 무려 {{ data.msg_most_count }}회;;</h4>
+    </div>
 
-    <h3>우리들의 추억이 담긴 랜덤 메시지 30개(새로고침 할 때마다 바뀝니다)</h3>
-    <table>
-        <th>메시지</th>
+    <div data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+        <h4>2-2. 우리들의 추억이 담긴 랜덤 메시지 50개(새로고침 시 변경)</h4>
         {% for msg in data.msg_random %}
-        <tr>
-            <td>{{ msg }}</td>
-        </tr>
+        "{{ msg }}"&nbsp;&nbsp;&nbsp;
         {% endfor %}
-    </table>
+    </div>
+
+    <div data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+        <h4>2-3. 가장 많이 보낸 메시지 top 10</h4>
+        <table data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+            <tr>
+                <th>순위</th>
+                <th>메시지</th>
+                <th>횟수(많은 순)</th>
+            </tr>
+            {% for msg in data.msg_most_list %}
+            <tr>
+                <td>{{ loop.index }}</td>
+                <td>{{ msg[0] }}</td>
+                <td>{{ msg[1] }}회</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+
+    <div data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+        <h4>2-4. 가장 적게 보낸 메시지 top 10</h4>
+        <table data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+            <tr>
+                <th>순위</th>
+                <th>메시지</th>
+                <th>횟수(적은 순)</th>
+            </tr>
+            {% for msg in data.msg_least_list %}
+            <tr>
+                <td>{{ loop.index }}</td>
+                <td>{{ msg[0] }}</td>
+                <td>{{ msg[1] }}회</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+
+    <div data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+        <h4>2-5. 가장 많이 보낸 단어</h4>
+    </div>
+
+    <div data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+        <h4>2-6. 이 단어는 몇 번이나 나왔을까욘?</h4>
+        <input type="textarea">
+        <button>검색</button>
+    </div>
 
 
-    <h3>우리가 가장 많이 대화한 날은 {{ data.date_most }}이고, 가장 적게 대화한 날은 {{ data.date_least }}이에요.</h3>
-
-    <table>
-        <th>가장 많이 대화한 날</th>
-        {% for date in data.date_most_list %}
-        <tr>
-            <td>{{ date }}</td>
-        </tr>
-        {% endfor %}
-    </table>
-
-    <table>
-        <th>가장 적게 대화한 날</th>
-        {% for date in data.date_least_list %}
-        <tr>
-            <td>{{ date }}</td>
-        </tr>
-        {% endfor %}
-    </table>
-
-    <h3>우리가 가장 많이 대화한 시간은 {{ data.time_most }}시고, 가장 적게 대화한 시간은 {{ data.time_least }}시예요.</h3>
-
-    <table>
-        <th>가장 많이 대화한 시간</th>
-        {% for time in data.time_most_list %}
-        <tr>
-            <td>{{ time }}시</td>
-        </tr>
-        {% endfor %}
-    </table>
-
-    <table>
-        <th>가장 적게 대화한 시간</th>
-        {% for time in data.time_least_list %}
-        <tr>
-            <td>{{ time }}시</td>
-        </tr>
-        {% endfor %}
-    </table>
-
-    <h3>
-        우리 방에서 가장 많이 말한 사람은 {{ data.user_most }}이고, 가장 적게 말한 사람은 {{ data.user_least }}이에요.<br>
-        {{ data.username }}님은 이 톡방에서 {{ data.num_freq }}번 말했네요! 당신의 순위는 {{ data.talk_rank }}위입니다.
-        {% if data.talk_rank < 6 %}
-        당신이 이 방의 중심입니다!
+    <h3>3. 누가 제일 많이 말하지?</h3>
+    <p>
+        일단 본인 {{ data.username }}은(는) 이 톡방에서 {{ data.talk_rank }}위고, {{ data.num_freq }}번 말했어욘ㅎ
+        {% if data.talk_rank < 5 %}
+        자주 오네요!
         {% elif data.talk_rank < 9 %}
         그래도 자리는 차지하는군요!
         {% else %}
-        대체 언제오시죠?
+        유령이시네요!
         {% endif %}
-    </h3>
+    </p>
 
-    <h3>전체 순위 보기</h3>
-    <table>
-        <th>순위</th>
-        <th>사용자</th>
-        <th>전체 메시지 개수</th>
-        {% for value in data.user_list %}
-        <tr>
-            <td>{{ loop.index }}</td>
-            <td>{{ value.0 }}</td>
-            <td>{{ value.1 }}개</td>
-        </tr>
-        {% endfor %}
-    </table>
+    <div data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+        <h4>3-1. 카톡을 가장 많이 한 사람은...</h4>
+        <p>당연하게도 {{ data.user_most }}입니당ㅋㅋ</p>
+    </div>
+
+    <div data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+        <h4>3-2. 카톡을 가장 적게 한 사람은...</h4>
+        <p>{{ data.user_least }}입니당ㅋㅋ</p>
+    </div>
+
+    <div data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+        <h4>3-3. 전체 순위</h4>
+        <table data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+            <tr>
+                <th>순위</th>
+                <th>이름</th>
+                <th>메시지 개수</th>
+            </tr>
+            {% for user in data.user_list %}
+            <tr>
+                <td>{{ loop.index }}</td>
+                <td>{{ user[0] }}</td>
+                <td>{{ user[1] }}개</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+
+    <div data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+        <h4>3-4. 일평균 발언량</h4>
+        <p>
+            일평균 발언량이란? 하루에 평균 몇 번 카톡 메시지를 보내는 지 계산한 값<br>
+            {{ data.username }}은(는) {{ data.day_talk_rank }}위고, 하루 평균 {{ data.talk_avg }}번 말했음!
+            {% if data.talk_avg > 100 %}
+            독보적입니다!
+            {% elif data.talk_avg > 30 %}
+            많이 오네요ㅎ
+            {% else %}
+            우리를 버리셨나요?
+            {% endif %}
+        </p>
+        <table data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+            <tr>
+                <th>순위</th>
+                <th>이름</th>
+                <th>일평균 메시지 개수</th>
+            </tr>
+            {% for value in data.day_talk_list %}
+            <tr>
+                <td>{{ loop.index }}</td>
+                <td>{{ value.0 }}</td>
+                <td>{{ value.1 }}개</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+
+    <div data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+        <h4>3-5. 언제 오세요?</h4>
+        <p>마지막 카카오톡 날짜인 {{ data.last_day }}로부터 며칠 전에 마지막으로 왔을까요? 보고싶습니다 여러분...</p>
+        <table data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
+            <tr>
+                <th>순위</th>
+                <th>이름</th>
+                <th>마지막으로 온 날</th>
+            </tr>
+            {% for value in data.user_day_before %}
+            <tr>
+                <td>{{ loop.index }}</td>
+                <td>{{ value.0 }}</td>
+                <td>{{ value.1 }}일 전</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
 
 
-    <h3>
-        {{ data.username }}님은 하루 평균 {{ data.talk_avg }}번 말했어요. 당신의 순위는 {{ data.day_talk_rank }}위입니다.
-        {% if data.talk_avg > 100 %}
-        독보적입니다!
-        {% elif data.talk_avg > 20 %}
-        톡방을 활성화시키는 데 일조하고 있습니다.
-        {% else %}
-        우리를 버리셨나요?
-        {% endif %}
-    </h3>
+    <h3>내년에도 함께해주세요 ♡</h3>
 
-    <h3>전체 순위 보기</h3>
-    <table>
-        <th>순위</th>
-        <th>사용자</th>
-        <th>일평균 메시지 개수</th>
-        {% for value in data.day_talk_list %}
-        <tr>
-            <td>{{ loop.index }}</td>
-            <td>{{ value.0 }}</td>
-            <td>{{ value.1 }}개</td>
-        </tr>
-        {% endfor %}
-    </table>
+
+    <p>남은것:<br>
+    시작날짜, 마지막날짜, 총 일수 - 구하긴 다 구했는데 sql 테이블로 만들지 않은 상태<br>
+    2-5 2-6 기능 추가 - 자주 쓰는 단어랑 단어 검색 기능</p>
 </section>
 {% endblock %}
