--- a/src/templates/kakaotalk/index.html
+++ b/src/templates/kakaotalk/index.html
@@ -114,9 +114,11 @@
 
     <div data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
         <h4>2-2. 우리들의 추억이 담긴 랜덤 메시지 50개(새로고침 시 변경)</h4>
-        {% for msg in data.msg_random %}
-        "{{ msg }}"&nbsp;&nbsp;&nbsp;
-        {% endfor %}
+        <p>
+            {% for msg in data.msg_random %}
+            "{{ msg }}"&nbsp;&nbsp;&nbsp;
+            {% endfor %}
+        </p>
     </div>
 
     <div data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
@@ -161,8 +163,12 @@
 
     <div data-aos="fade-up" data-aos-offset="50" data-aos-duration="1500">
         <h4>2-6. 이 단어는 몇 번이나 나왔을까욘?</h4>
-        <input type="textarea">
-        <button>검색</button>
+        <p id="kkt_search">
+            <label>단어: </label>
+            <input type="textarea" id="word">
+            <button id="search">검색</button>
+        </p>
+        <p id="search_results"></p>
     </div>
 
 
@@ -259,7 +265,34 @@
 
 
     <p>남은것:<br>
-    시작날짜, 마지막날짜, 총 일수 - 구하긴 다 구했는데 sql 테이블로 만들지 않은 상태<br>
-    2-5 2-6 기능 추가 - 자주 쓰는 단어랑 단어 검색 기능</p>
+    시작날짜, 마지막날짜, 총 일수 - 구하긴 다 구했는데 sql 테이블로 만들지 않은 상태</p>
 </section>
+
+<script type="text/javascript">
+    $("#search").click(function () {
+        var data = $("#word").val();
+        $.ajax({
+            type: "GET",
+            url: base_url + "/kakaotalk/search?word="+data,
+            contentType: false, 
+			processData: false, 
+			cache: false,
+            success: function (response) {
+                // 여기.. 단어 display
+                $('#search_results').empty();
+                str = ''; 
+                $.each(response , function(r, arr) {
+                    str += '<b>총 ' + arr.length +'개의 메시지</b><br>';
+                    $.each(arr, function (i, el) {
+                        str += (el + '<br>');
+                    });
+                });
+                $('#search_results').append(str);
+            },
+            error: function (request, status, error) {
+                alert('단어를 입력하세요.');
+            },
+        });
+    });
+</script>
 {% endblock %}
