--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -18,11 +18,11 @@ fonts
 /* base */
 body {padding: 0 4vw;}
 
-h1 {font-family: 'Single Day', cursive; font-size: 5vw;} /* title */
+h1 {font-family: 'Single Day', cursive; font-size: clamp(10px, 3vw, 30px);} /* title */
 h1 a {color: var(--pink); text-decoration: none;}
-h2 {font-family: 'Gaegu', sans-serif; font-size: 4.5vw;}
-h3 {font-size: 3.2vw;}
-h4 {font-size: 2.6vw;}
+h2 {font-family: 'Gaegu', sans-serif; font-size: clamp(25px, 5vw, 50px);}
+h3 {font-size: clamp(18px, 2.6vw, 35px);}
+h4 {font-size: clamp(13px, 2vw, 20px);}
 
 footer {text-align: center; padding-top: 5vw;}
 footer h6 {margin: 0;}
@@ -46,11 +46,11 @@ footer h6 {margin: 0;}
 
 
 /* kakaotalk */
-#kkt h2 {text-align: center;}
+#kkt h2 {text-align: center; padding: 10vh 0;}
 #kkt h3 {padding-top: 4em;}
 #kkt div {padding: 5vh 0;}
-#kkt p {font-size: 2vw;}
-#kkt table {overflow: hidden; width: 90%; margin: 0 auto; display: table; font-family: 'Gaegu', sans-serif; font-size: 2vw;}
+#kkt p {font-size: clamp(10px, 1.5vw, 20px);}
+#kkt table {overflow: hidden; width: 90%; margin: 0 auto; display: table; font-family: 'Gaegu', sans-serif; font-size: clamp(10px, 1.5vw, 20px);}
 #kkt td {font-weight: normal; font-size: 1em;}
 #kkt td, #kkt th {padding-bottom: 2%; padding-top: 2%; padding-left:2%; text-align: center;}
 #kkt tr:nth-child(odd) {background-color: var(--light-gray);} /* Background-color of the odd rows */
@@ -59,7 +59,7 @@ footer h6 {margin: 0;}
 /* #kkt td:first-child {color: var(--pink);} */
 #kkt tr:hover {background-color: var(--gray); -webkit-box-shadow: 0 6px 6px -6px #0E1119; -moz-box-shadow: 0 6px 6px -6px #0E1119; box-shadow: 0 6px 6px -6px #0E1119;}
 #kkt td:hover {background-color: var(--dark-pink); color: var(--gray);}
-#kkt_search #word {resize: none; width: 100px; height: max-content; border:none; border-bottom: solid 1px;}
+#kkt_search #word {resize: none; height: max-content; border: none; border-bottom: solid 1px;}
 #kkt_search #word:focus {outline: none;}
 #kkt_search #search {background-color: var(--light-gray); color: var(--gray); padding: 3px; border: solid 1px; border-radius: 10%;}
 
@@ -72,8 +72,5 @@ footer h6 {margin: 0;}
 
 @media screen and (max-width: 700px) {
     h1 a, .user_nav a, #function li {font-size: smaller;}
-    #main h2 {font-size: medium;}
-    #main h4 {font-size: small;}
-
     #kkt div {padding: 2vh 0;}
 }
